--- a/index.html
+++ b/index.html
@@ -4,23 +4,33 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" type=""  href="/imagenes/EL CARACOL  logo.png">
+    <link rel="stylesheet" href="style.css">
     <title>El Caracol Surf</title>
 </head>
 <body>
     <header>
-        <img src="/imagenes/EL CARACOL.png" alt="logo el caracol surf">
-        <h1>EL CARACOL SURF</h1>
+        <div class="menu-desktop">
+            <nav>
+                <ul><span>Menu</span></ul>
+                <ul><span>Posada Miguel</span></ul>
+            </nav>
+        </div>
+        <div>
+            <a href="#" id="menu-hamburguesa">
+                <img class="icon-hamburguesa" src="/iconos/icon-hamburger.svg" alt="">
+            </a>
+        </div>
     </header>
-    <nav>
-        <h3>menu</h3>
+    <nav class="container">
+        <div class="logo">
+            <img src="/imagenes/EL CARACOL (2).png" alt="">
+        
+        </div>
+        <div class="redes-sociales">
+            <button><i class="fab fa-facebook"></i></button>
+            <button><i class="fab fa-bluetooth-b"></i></button>
+        </div>
     </nav>
-    <footer>
-        <ul>hola</ul>
-
-        <ul>hola</ul>
-
-        <ul>hola</ul>
-    </footer>
-
 </body>
 </html>
