agrgandole iconos a la pagina principal

--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="icon" type=""  href="/imagenes/EL CARACOL  logo.png">
     <link rel="stylesheet" href="style.css">
+    <script src="https://kit.fontawesome.com/454315268b.js" crossorigin="anonymous"></script>
     <title>El Caracol Surf</title>
 </head>
 <body>
+   
     <header>
         <div class="menu-desktop">
             <nav>
@@ -24,13 +26,14 @@
     </header>
     <nav class="container">
         <div class="logo">
-            <img src="/imagenes/EL CARACOL (2).png" alt="">
-        
-        </div>
-        <div class="redes-sociales">
-            <button><i class="fab fa-facebook"></i></button>
-            <button><i class="fab fa-bluetooth-b"></i></button>
+            <img class="logo-caracol" src="/imagenes/EL CARACOL (2).png" alt="">
         </div>
     </nav>
+    <footer>
+        <div class="iconos">
+            <i class="fab fa-instagram"></i>
+            <i class="fab fa-facebook-square"></i>
+        </div>
+    </footer>
 </body>
 </html>
