agregando margin al menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
                 <ul><span>Posada Miguel</span></ul>
             </nav>
         </div>
-        <div>
-            <a href="#" id="menu-hamburguesa">
+        <div class="menu-hamburguesa">
+            <a href="#">
                 <img class="icon-hamburguesa" src="/iconos/icon-hamburger.svg" alt="">
             </a>
         </div>
