agregandole avento al menu hamburguesa

--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
     </nav>
     <footer>
         <div class="iconos">
-            <i class="fab fa-instagram"></i>
-            <i class="fab fa-facebook-square"></i>
+            <a href="https://www.instagram.com/elcaracolsurfer_zipolite/"><i class="fab fa-instagram"></i></a>
+            <a href="https://www.facebook.com/pages/El%20Caracol,%20Zipolite/757467541265888/"><i class="fab fa-facebook-square"></i></a>
         </div>
     </footer>
     <script src="/js/liv.js"></script>
