ajustes de color y tamaño

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div>
      
     </header>
-    <nav class="menu-resposive" style="display: none;">
+    <nav class="menu-resposive mostrar" style="display: none;">
         <a href="/menu.html">Menu</a>
         <a href="#">About</a>
         <a href="#">Contact</a>
