--- a/index.html
+++ b/index.html
@@ -38,11 +38,11 @@
      
     </header>
     <nav class="menu-resposive mostrar" style="display: none;">
-        <a href="/menu.html">Menu</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
-        <a href="#">Blog</a>
-        <a href="#">Carees</a>
+        <a href="/menu.html">Desayunos</a>
+        <a href="#">comida</a>
+        <a href="#">Cena</a>
+        <a href="#">Bebidas</a>
+        <a href="#">Posada Miguel</a>
     </nav>
     <nav class="container">
         <div class="logo">
