menu de desayunos

--- a/index.html
+++ b/index.html
@@ -16,19 +16,19 @@
     <div class="menu-desktop">
         <nav>
           <ul class="button-hover">
-             <span>Posada miguel</span> 
+             <a href="/desayunos/desayunos.html"><span>Desayunos</span></a> 
           </ul>
           <ul class="button-hover">
-            <span>About</span> 
+            <span>comida</span> 
           </ul>
           <ul class="button-hover"> 
-            <span>Contact</span>
+            <span>Cena</span>
           </ul>
           <ul class="button-hover">
-            <span>Blog</span> 
+            <span>Bebidas</span> 
           </ul>
           <ul class="button-hover">
-           <span>Carees</span> 
+           <span>postres</span> 
           </ul>
         </nav>
       </div>
@@ -38,10 +38,11 @@
      
     </header>
     <nav class="menu-resposive mostrar" style="display: none;">
-        <a href="/menu.html">Desayunos</a>
+        <a href="/desayunos/desayunos.html">Desayunos</a>
         <a href="#">comida</a>
         <a href="#">Cena</a>
         <a href="#">Bebidas</a>
+        <a href="#">postres</a>
         <a href="#">Posada Miguel</a>
     </nav>
     <nav class="container">
