menus de dasayuno y comida

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="menu-desktop">
         <nav>
           <ul class="button-hover">
-             <a href="/desayunos/desayunos.html"><span>Desayunos</span></a> 
+             <a href="/paginas/desayunos.html"><span>Desayunos</span></a> 
           </ul>
           <ul class="button-hover">
             <span>comida</span> 
@@ -38,8 +38,8 @@
      
     </header>
     <nav class="menu-resposive mostrar" style="display: none;">
-        <a href="/desayunos/desayunos.html">Desayunos</a>
-        <a href="#">comida</a>
+        <a href="/paginas/desayunos.html">Desayunos</a>
+        <a href="/paginas/comidas.html">comida</a>
         <a href="#">Cena</a>
         <a href="#">Bebidas</a>
         <a href="#">postres</a>
