--- a/paginas/desayunos.html
+++ b/paginas/desayunos.html
@@ -14,7 +14,7 @@
         <h1>Desayunos</h1>
     </header>
     <div class="menu-desayunos">
-        <div>
+        <div class="">
             <P>HUEVO AL GUSTO</P><br>
             <P>QUESADILLAS(3 PZAS)</P><br>
             <p>ENTOMATADAS</p><br>
