modificando el menu del desyuno

--- a/paginas/desayunos.html
+++ b/paginas/desayunos.html
@@ -16,7 +16,7 @@
     <div class="menu-desayunos">
         <div class="">
             <P>HUEVO AL GUSTO</P><br>
-            <P>QUESADILLAS(3 PZAS)</P><br>
+            <P>QUESADILLAS</P><br>
             <p>ENTOMATADAS</p><br>
             <P>CHILAQUILES</P>
             <P>C/CARNE</P><br>
