cambios de la pagina

--- a/paginas/desayunos.html
+++ b/paginas/desayunos.html
@@ -14,7 +14,7 @@
         <h1>Desayunos</h1>
     </header>
     <div class="menu-desayunos">
-        <div class="">
+        <div class="menu">
             <P>HUEVO AL GUSTO</P><br>
             <P>QUESADILLAS</P><br>
             <p>ENTOMATADAS</p><br>
@@ -27,7 +27,7 @@
             <P>YOGURTH Y GRANOLA</P><br>
             <P>PAN TOSTADO</P><br>
         </div>
-        <div>
+        <div class="precios">
             <p>$60</p><br>
             <p>$60</p><br>
             <p>$60</p><br>
