pagina de bebidas

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
              <a href="/paginas/desayunos.html"><span>Desayunos</span></a> 
           </ul>
           <ul class="button-hover">
-            <span>comida</span> 
+            <a href="/paginas/comidas.html"><span>comida</span></a> 
           </ul>
           <ul class="button-hover"> 
             <span>Cena</span>
@@ -41,7 +41,7 @@
         <a href="/paginas/desayunos.html">Desayunos</a>
         <a href="/paginas/comidas.html">comida</a>
         <a href="#">Cena</a>
-        <a href="#">Bebidas</a>
+        <a href="/paginas/bebidas.html">Bebidas</a>
         <a href="#">postres</a>
         <a href="#">Posada Miguel</a>
     </nav>
