--- a/paginas/comidas.html
+++ b/paginas/comidas.html
@@ -6,14 +6,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>El Caracol</title>
     <script src="https://kit.fontawesome.com/454315268b.js" crossorigin="anonymous"></script>
+    <link rel="stylesheet" href="/css/comida.css">
 </head>
 <body>
-    <a href=""><i class="fas fa-arrow-left"></i></a>
+    <a href="/index.html"><i class="fas fa-arrow-left"></i></a>
     <header>
         <h1>comidas</h1>
     </header>
     <div class="cont-pescado">
-        <div>
+        <div class="cont-recipiente">
             <p>PESCADO</p>
             <P>AL AJO</P>
             <p>A LA DIABLA</p>
@@ -26,8 +27,8 @@
         </div>
     </div>
     <div class="cont-camarones">
-        <div>
-            <div>
+        <div class="contenedor">
+            <div class="cont-recipiente">
                 <p>CAMARONES</p>
                 <P>AL AJO</P>
                 <p>A LA DIABLA</p>
@@ -38,8 +39,8 @@
                 <p>$130</p>
             </div>
         </div>
-        <div>
-            <div>
+        <div class="contenedor">
+            <div class="cont-recipiente">
                 <p>EMPANIZADO</p>
                 <P>4 X 4</P>
             </div>
@@ -50,7 +51,7 @@
         </div>
     </div>
     <div class="cont-filete">
-        <div>
+        <div class="cont-recipiente">
             <p>FILETE DE PESCADO</p>
             <P>AL AJO</P>
             <p>A LA DIABLA</p>
