poniendo en misnuscula el menu de desayunos

--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <nav class="menu-resposive mostrar" style="display: none;">
         <a href="/paginas/desayunos.html">Desayunos</a>
         <a href="/paginas/comidas.html">comida</a>
-        <a href="#">Cena</a>
+        <a href="#">Especialidades</a>
         <a href="/paginas/bebidas.html">Bebidas</a>
         <a href="#">postres</a>
         <a href="#">Posada Miguel</a>
