--- a/paginas/desayunos.html
+++ b/paginas/desayunos.html
@@ -5,7 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Menu</title>
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="/css/desayunos.css">
     <script src="https://kit.fontawesome.com/454315268b.js" crossorigin="anonymous"></script>
 </head>
 <body>
@@ -15,17 +15,17 @@
     </header>
     <div class="menu-desayunos">
         <div class="menu">
-            <P>HUEVO AL GUSTO</P><br>
-            <P>QUESADILLAS</P><br>
-            <p>ENTOMATADAS</p><br>
-            <P>CHILAQUILES</P>
-            <P>C/CARNE</P><br>
-            <P>SINCRONIZADAS</P><br>
-            <P>OMELLETS</P><br>
-            <P>HOTCAKES</P><br>
-            <P>ENSALADA DE FRUTAS CON YOG. Y GRANOLA</P><br>
-            <P>YOGURTH Y GRANOLA</P><br>
-            <P>PAN TOSTADO</P><br>
+            <P>Huevos Al Gusto</P><br>
+            <P>Quesadillas</P><br>
+            <p>Entomatadas</p><br>
+            <P>Chilaquiles </P>
+            <P>C/Carne</P><br>
+            <P>Sincronizadas</P><br>
+            <P>Omelet</P><br>
+            <P>Hot Cakes</P><br>
+            <P>Ensalada De Frutas Con Yogurth Y Granola</P><br>
+            <P>Yogurth Y Granola</P><br>
+            <P>Pan Tostado</P><br>
         </div>
         <div class="precios">
             <p>$60</p><br>
