cambiando el tamaño de los textos de la pagina de comidas

--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a href="#">Especialidades</a>
         <a href="/paginas/bebidas.html">Bebidas</a>
         <a href="#">postres</a>
-        <a href="#">Posada Miguel</a>
+        <a href="/paginas/posada-miguel.html">Posada Miguel</a>
     </nav>
     <nav class="container">
         <div class="logo">
