--- a/index.html
+++ b/index.html
@@ -21,14 +21,11 @@
           <ul class="button-hover">
             <a href="/paginas/comidas.html"><span>comida</span></a> 
           </ul>
-          <ul class="button-hover"> 
-            <span>Cena</span>
+          <ul class="button-hover">
+            <a href="/paginas/bebidas.html"><span>Bebidas</span></a>
           </ul>
           <ul class="button-hover">
-            <span>Bebidas</span> 
-          </ul>
-          <ul class="button-hover">
-           <span>postres</span> 
+            <a href="/paginas/posada-miguel.html"><span>Posada Miguel</span></a>
           </ul>
         </nav>
       </div>
@@ -40,7 +37,6 @@
     <nav class="menu-resposive mostrar" style="display: none;">
         <a href="/paginas/desayunos.html">Desayunos</a>
         <a href="/paginas/comidas.html">comida</a>
-        <a href="#">Especialidades</a>
         <a href="/paginas/bebidas.html">Bebidas</a>
         <a href="#">postres</a>
         <a href="/paginas/posada-miguel.html">Posada Miguel</a>
